--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
   "type": "commonjs",
   "dependencies": {
     "@hapi/hapi": "^21.4.3",
+    "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.1",
+    "@hapi/vision": "^7.0.3",
+    "amqplib": "^0.10.9",
     "auto-bind": "^5.0.1",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "joi": "^18.0.1",
     "nanoid": "^5.1.6",
     "node-pg-migrate": "^8.0.3",
-    "pg": "^8.16.3"
+    "nodemailer": "^7.0.9",
+    "pg": "^8.16.3",
+    "redis": "^5.8.3"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
